test/snapshot/check/parse/unexpected_char.vole.snap
[stdout]

[stderr]
error[E1003]: expected declaration, found 'let'
  --> <path>/unexpected_char.vole:1:1
  |
1 | let x = `
  | ^^^
